--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,11 @@ matplotlib = "*"
 jupyter = "*"
 seaborn = "*"
 xgboost = "*"
+pickle5 = "*"
+flask = "*"
 
 [dev-packages]
+ipykernel = "*"
 
 [requires]
 python_version = "3.10"
